<resources>
    <string name="app_name">Route E-Commerce</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="what_do_you_search_for">what do you search for?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="password">**********</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="your_address">Your Address</string>
    <string name="phone_num">01159732150</string>
    <string name="masr_el_gdeda_street_9">Masr EL Gdeda,street 9,</string>
    <string name="_01159732150">01159732150</string>
    <string name="full_name">Full Name</string>
    <string name="nike_air_jordon">Nike Air Jordon</string>
    <string name="black_color">Black color</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="egp_1_500">EGP 1,500</string>
    <string name="egp_1_200">EGP 1,200</string>
    <string name="total_price">Total price</string>
    <string name="cart">Cart</string>
    <string name="something_went_wrong">Something Went Wrong,\nPlease check your internet connection.</string>
    <string name="try_again">Try Again</string>
    <string name="shop_now">Shop Now</string>
    <string name="subcategory">Subcategory</string>
    <string name="most_selling_products">Most Selling Products</string>
    <string name="review">Review</string>
    <string name="electronics">Electronics</string>
    <string name="loading">loading</string>
    <string name="forgot_password">forgot password</string>
    <string name="welcome">Welcome Back To Route</string>
    <string name="create_new_account">Don\'t have account? Create Account</string>
    <string name="login">login</string>
    <string name="please_sign_in_with_your_mail">please sign in with your mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="user_name">User name</string>
    <string name="password_text">Password</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="search">Search</string>
    <string name="like">like</string>
    <string name="placeholder">Placeholder</string>
    <string name="off">off</string>
    <string name="up_to">UP TO</string>
</resources>