<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/selector_home_nav_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/categoriesFragment"
        android:enabled="true"
        android:icon="@drawable/selector_categories_nav_icon"
        android:title="@string/categories" />

    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/selector_favorites_nav_icon"
        android:title="@string/like" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/selector_profile_nav_icon"
        android:title="@string/profile" />
</menu>
