<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue">

            <ImageView
                android:id="@+id/route_loge"
                android:layout_width="237dp"
                android:layout_height="90dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/logo_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/full_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/nameEditTextTil"
                app:layout_constraintStart_toStartOf="@id/nameEditTextTil" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameEditTextTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/enter_your_full_name"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@id/route_loge">

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/your_mobile_number"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/mobileEditTextTil"
                app:layout_constraintStart_toStartOf="@id/mobileEditTextTil" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileEditTextTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/enter_your_mobile_number"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@id/nameEditTextTil">

                <EditText
                    android:id="@+id/mobileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_style" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/your_email"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/emailEditTextTil"
                app:layout_constraintStart_toStartOf="@id/emailEditTextTil" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="65dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/enter_your_email"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@id/mobileEditTextTil">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_style" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/passwordEditTextTil"
                app:layout_constraintStart_toStartOf="@id/passwordEditTextTil" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="65dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/enter_password"
                android:padding="2dp"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/emailEditTextTil">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_style"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="65dp"
                android:background="@drawable/edit_text_style"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/DarkBlue"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/passwordEditTextTil" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="24dp"
                android:text="@string/already_have_account"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/loginBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>